[gd_scene load_steps=3 format=3 uid="uid://w8jskswnq2el"]

[ext_resource type="Script" uid="uid://dqb2iyy8oxwvv" path="res://scripts/FishBookEntry.gd" id="1_so62u"]
[ext_resource type="Texture2D" uid="uid://cdqevtqdy43fr" path="res://assets/fish/unknown.png" id="2_ri3oc"]

[node name="FishBookEntry" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1088.0
offset_bottom = -507.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_so62u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Icon" type="TextureRect" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_ri3oc")

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Name"

[node name="RarityLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Rarity"

[node name="ValueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Value"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
